feat(server): 实现头像和封面裁切，启用ffmpeg连接池，更新README
